# budgie-cpufreq-applet

./: README.md  meson.build
data/: CpuFreqApplet.plugin  budgie-cpufreq-modifier  budgie.cpufreq.policy  com.github.dirli.budgie-cpufreq-applet.gschema.xml  meson.build
src/: Cpu.vala  CpuFreqApplet.vala  Utils.vala  meson.build
src/Services/: FreqManager.vala
src/Widgets/: CpuView.vala
